Pruebas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     empty -> <empty>
Rule 2     C -> MENOR
Rule 3     C -> MAYOR
Rule 4     C -> MENOR_IGUAL
Rule 5     C -> MAYOR_IGUAL
Rule 6     C -> IGUAL
Rule 7     C -> DIFERENTE
Rule 8     E -> E2
Rule 9     E -> E2 C E2
Rule 10    E2 -> E3
Rule 11    E2 -> E2 OR E3
Rule 12    E2 -> E2 MAS E3
Rule 13    E2 -> E2 MENOS E3
Rule 14    E3 -> E4
Rule 15    E3 -> E3 AND E4
Rule 16    E3 -> E3 POR E4
Rule 17    E3 -> E3 ENTRE E4
Rule 18    E3 -> E3 MODULO E4
Rule 19    E4 -> T
Rule 20    E4 -> NOT T
Rule 21    T -> PARENTESIS_IZQUIERDO E PARENTESIS_DERECHO
Rule 22    T -> FUNCTION
Rule 23    T -> ID_COMPLETO
Rule 24    T -> VALOR_INT
Rule 25    T -> VALOR_FLOAT
Rule 26    ID_COMPLETO -> ID
Rule 27    V -> TIPO DOS_PUNTOS A PUNTO_COMA
Rule 28    V -> TIPO DOS_PUNTOS ID PUNTO_COMA
Rule 29    TIPO -> INT
Rule 30    TIPO -> FLOAT
Rule 31    V_M -> empty
Rule 32    V_M -> V V_M
Rule 33    A -> ID ASIGNACION VALOR_INT
Rule 34    A -> ID ASIGNACION VALOR_FLOAT
Rule 35    A -> ID ASIGNACION E
Rule 36    A -> ID ASIGNACION ID_COMPLETO PARENTESIS_IZQUIERDO PARENTESIS_DERECHO
Rule 37    EST -> empty
Rule 38    EST -> LOOP END_LOOP PUNTO_COMA EST
Rule 39    EST -> IF_ END_IF PUNTO_COMA EST
Rule 40    EST -> A PUNTO_COMA EST
Rule 41    EST -> PROCEDURE PUNTO_COMA EST
Rule 42    EST -> FUNCTION PUNTO_COMA EST
Rule 43    EST -> ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO PUNTO_COMA EST
Rule 44    LOOP -> DO_WHILE
Rule 45    LOOP -> WHILE_
Rule 46    LOOP -> FOR_
Rule 47    DO_WHILE -> DO DOS_PUNTOS EST WHILE E PUNTO_COMA
Rule 48    WHILE_ -> WHILE E DOS_PUNTOS EST
Rule 49    FOR_ -> FOR EST PUNTO_COMA E PUNTO_COMA EST DOS_PUNTOS EST
Rule 50    IF_ -> IF E DOS_PUNTOS EST ELSIF_
Rule 51    ELSIF_ -> END IF PUNTO_COMA
Rule 52    ELSIF_ -> ELSE DOS_PUNTOS EST END IF PUNTO_COMA
Rule 53    ELSIF_ -> ELSIF DOS_PUNTOS E EST ELSIF_
Rule 54    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
Rule 55    P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 56    F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
Rule 57    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
Rule 58    MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
Rule 59    PROGRAMA -> MP PROGRAMA_H
Rule 60    PROGRAMA_H -> empty
Rule 61    PROGRAMA_H -> P PROGRAMA_H
Rule 62    PROGRAMA_H -> F PROGRAMA_H

Terminals, with rules where they appear

AND                  : 15
ASIGNACION           : 33 34 35 36
BEGIN                : 54 55 56 57 58
DIFERENTE            : 7
DO                   : 47
DOS_PUNTOS           : 27 28 47 48 49 50 52 53 54 55 56 57 58
ELSE                 : 52
ELSIF                : 53
END                  : 51 52 54 55 56 57 58
END_IF               : 39
END_LOOP             : 38
ENTRE                : 17
FLOAT                : 30
FOR                  : 49
FUNCTION             : 22 42 56
ID                   : 26 28 33 34 35 36 43 54 55 56 56
IF                   : 50 51 52
IGUAL                : 6
INT                  : 29
MAIN                 : 57 58
MAS                  : 12
MAYOR                : 3
MAYOR_IGUAL          : 5
MENOR                : 2
MENOR_IGUAL          : 4
MENOS                : 13
MODULO               : 18
NOT                  : 20
OR                   : 11
PARENTESIS_DERECHO   : 21 36 43 54 55 56 57 58
PARENTESIS_IZQUIERDO : 21 36 43 54 55 56 57 58
POR                  : 16
PROCEDURE            : 41 54 54 55 55 57 57 58 58
PUNTO_COMA           : 27 28 38 39 40 41 42 43 47 49 49 51 52 54 55 55 55 56 56 56 57 57 58 58 58
RETURN               : 55 56 58
VALOR_FLOAT          : 25 34
VALOR_INT            : 24 33
WHILE                : 47 48
error                : 

Nonterminals, with rules where they appear

A                    : 27 40
C                    : 9
DO_WHILE             : 44
E                    : 21 35 47 48 49 50 53
E2                   : 8 9 9 11 12 13
E3                   : 10 11 12 13 15 16 17 18
E4                   : 14 15 16 17 18
ELSIF_               : 50 53
EST                  : 38 39 40 41 42 43 47 48 49 49 49 50 52 53 54 55 56 57 58
F                    : 62
FOR_                 : 46
ID_COMPLETO          : 23 36
IF_                  : 39
LOOP                 : 38
MP                   : 59
P                    : 61
PROGRAMA             : 0
PROGRAMA_H           : 59 61 62
T                    : 19 20
TIPO                 : 27 28 56
V                    : 32
V_M                  : 32 54 55 56 57 58
WHILE_               : 45
empty                : 31 37 60

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (59) PROGRAMA -> . MP PROGRAMA_H
    (57) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> . PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PROCEDURE       shift and go to state 3

    PROGRAMA                       shift and go to state 1
    MP                             shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (59) PROGRAMA -> MP . PROGRAMA_H
    (60) PROGRAMA_H -> . empty
    (61) PROGRAMA_H -> . P PROGRAMA_H
    (62) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (54) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (56) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    PROGRAMA_H                     shift and go to state 4
    empty                          shift and go to state 5
    P                              shift and go to state 6
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 3

    (57) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE . MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    MAIN            shift and go to state 12


state 4

    (59) PROGRAMA -> MP PROGRAMA_H .

    $end            reduce using rule 59 (PROGRAMA -> MP PROGRAMA_H .)


state 5

    (60) PROGRAMA_H -> empty .

    $end            reduce using rule 60 (PROGRAMA_H -> empty .)


state 6

    (61) PROGRAMA_H -> P . PROGRAMA_H
    (60) PROGRAMA_H -> . empty
    (61) PROGRAMA_H -> . P PROGRAMA_H
    (62) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (54) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (56) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    P                              shift and go to state 6
    PROGRAMA_H                     shift and go to state 13
    empty                          shift and go to state 5
    F                              shift and go to state 7
    TIPO                           shift and go to state 9

state 7

    (62) PROGRAMA_H -> F . PROGRAMA_H
    (60) PROGRAMA_H -> . empty
    (61) PROGRAMA_H -> . P PROGRAMA_H
    (62) PROGRAMA_H -> . F PROGRAMA_H
    (1) empty -> .
    (54) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> . PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (56) F -> . TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    $end            reduce using rule 1 (empty -> .)
    PROCEDURE       shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    F                              shift and go to state 7
    PROGRAMA_H                     shift and go to state 14
    empty                          shift and go to state 5
    P                              shift and go to state 6
    TIPO                           shift and go to state 9

state 8

    (54) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    ID              shift and go to state 15


state 9

    (56) F -> TIPO . ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    ID              shift and go to state 16


state 10

    (29) TIPO -> INT .

    ID              reduce using rule 29 (TIPO -> INT .)
    DOS_PUNTOS      reduce using rule 29 (TIPO -> INT .)


state 11

    (30) TIPO -> FLOAT .

    ID              reduce using rule 30 (TIPO -> FLOAT .)
    DOS_PUNTOS      reduce using rule 30 (TIPO -> FLOAT .)


state 12

    (57) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE MAIN . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 17


state 13

    (61) PROGRAMA_H -> P PROGRAMA_H .

    $end            reduce using rule 61 (PROGRAMA_H -> P PROGRAMA_H .)


state 14

    (62) PROGRAMA_H -> F PROGRAMA_H .

    $end            reduce using rule 62 (PROGRAMA_H -> F PROGRAMA_H .)


state 15

    (54) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 18


state 16

    (56) F -> TIPO ID . PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_IZQUIERDO shift and go to state 19


state 17

    (57) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 20


state 18

    (54) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 21


state 19

    (56) F -> TIPO ID PARENTESIS_IZQUIERDO . PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PARENTESIS_DERECHO shift and go to state 22


state 20

    (57) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 23


state 21

    (54) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    DOS_PUNTOS      shift and go to state 24


state 22

    (56) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO . DOS_PUNTOS V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    DOS_PUNTOS      shift and go to state 25


state 23

    (57) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (31) V_M -> . empty
    (32) V_M -> . V V_M
    (1) empty -> .
    (27) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (28) V -> . TIPO DOS_PUNTOS ID PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V_M                            shift and go to state 26
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 24

    (54) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA
    (31) V_M -> . empty
    (32) V_M -> . V V_M
    (1) empty -> .
    (27) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (28) V -> . TIPO DOS_PUNTOS ID PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V_M                            shift and go to state 30
    empty                          shift and go to state 27
    V                              shift and go to state 28
    TIPO                           shift and go to state 29

state 25

    (56) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS . V_M BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA
    (31) V_M -> . empty
    (32) V_M -> . V V_M
    (1) empty -> .
    (27) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (28) V -> . TIPO DOS_PUNTOS ID PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    TIPO                           shift and go to state 29
    V_M                            shift and go to state 31
    empty                          shift and go to state 27
    V                              shift and go to state 28

state 26

    (57) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 32


state 27

    (31) V_M -> empty .

    BEGIN           reduce using rule 31 (V_M -> empty .)


state 28

    (32) V_M -> V . V_M
    (31) V_M -> . empty
    (32) V_M -> . V V_M
    (1) empty -> .
    (27) V -> . TIPO DOS_PUNTOS A PUNTO_COMA
    (28) V -> . TIPO DOS_PUNTOS ID PUNTO_COMA
    (29) TIPO -> . INT
    (30) TIPO -> . FLOAT

    BEGIN           reduce using rule 1 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11

    V                              shift and go to state 28
    V_M                            shift and go to state 33
    empty                          shift and go to state 27
    TIPO                           shift and go to state 29

state 29

    (27) V -> TIPO . DOS_PUNTOS A PUNTO_COMA
    (28) V -> TIPO . DOS_PUNTOS ID PUNTO_COMA

    DOS_PUNTOS      shift and go to state 34


state 30

    (54) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    BEGIN           shift and go to state 35


state 31

    (56) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M . BEGIN PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    BEGIN           shift and go to state 36


state 32

    (57) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST END PROCEDURE PUNTO_COMA
    (58) MP -> PROCEDURE MAIN PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PUNTO_COMA      shift and go to state 37


state 33

    (32) V_M -> V V_M .

    BEGIN           reduce using rule 32 (V_M -> V V_M .)


state 34

    (27) V -> TIPO DOS_PUNTOS . A PUNTO_COMA
    (28) V -> TIPO DOS_PUNTOS . ID PUNTO_COMA
    (33) A -> . ID ASIGNACION VALOR_INT
    (34) A -> . ID ASIGNACION VALOR_FLOAT
    (35) A -> . ID ASIGNACION E
    (36) A -> . ID ASIGNACION ID_COMPLETO PARENTESIS_IZQUIERDO PARENTESIS_DERECHO

    ID              shift and go to state 39

    A                              shift and go to state 38

state 35

    (54) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST END PROCEDURE
    (55) P -> PROCEDURE ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN PUNTO_COMA END PROCEDURE PUNTO_COMA

    PUNTO_COMA      shift and go to state 40


state 36

    (56) F -> TIPO ID PARENTESIS_IZQUIERDO PARENTESIS_DERECHO DOS_PUNTOS V_M BEGIN . PUNTO_COMA EST RETURN ID PUNTO_COMA END FUNCTION PUNTO_COMA

    PUNTO_COMA      shift and go to state 41


state 37
